# Calendar_epdiy_v7

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
components/epdiy2/: CMakeLists.txt
components/epdiy2/.github/workflows/: main.yml
components/epdiy2/examples/EPDIY-EC080SC2-main/: README.md
components/epdiy2/examples/EPDIY-EC080SC2-main/main/: main.c
components/epdiy2/examples/demo/main/: main.c
components/epdiy2/examples/dragon/main/: CMakeLists.txt  main.c
components/epdiy2/examples/fb_mode_test/main/: CMakeLists.txt  main.c
components/epdiy2/examples/grayscale_test/main/: main.c
components/epdiy2/examples/http-server/main/: CMakeLists.txt
components/epdiy2/examples/screen_diag/main/: CMakeLists.txt  epd.c
components/epdiy2/examples/weather/main/: ArduinoJson.h  CMakeLists.txt
components/epdiy2/examples/www-image/main/: CMakeLists.txt
components/epdiy2/scripts/: remap_ed047tc2_to_ed060kd1.py
components/epdiy2/src/: builtin_waveforms.c  displays.c  epd_board.h  epd_display.h  epd_internals.h
components/epdiy2/src/board/: epd_board_epdiy2_s3.c
components/epdiy2/src/waveforms/: epdiy_ED060KD1.h
docs/superpowers/plans/: 2026-06-09-editor-implementation.md  2026-06-12-render-harness.md
docs/superpowers/specs/: 2026-06-09-editor-design.md  2026-06-12-render-harness-design.md
editor/: README.md  app.js  index.html  styles.css
harness/: CMakeLists.txt  README.md  run.sh
harness/assets/sdcard/: content.txt
harness/src/: epd_stub.c  epd_stub.h  harness_main.c  miniz_shim.c  png_writer.c  png_writer.h
harness/src/esp_shim/: esp_assert.h  esp_attr.h  esp_err.h  esp_heap_caps.h  esp_idf_version.h  esp_log.h  esp_memory_utils.h  esp_types.h  miniz.h  sdkconfig.h  sdmmc_cmd.h
harness/src/esp_shim/driver/: gpio.h  i2c_master.h
harness/tests/: harness_tests.c
main/: CMakeLists.txt  app_config.h  button_input.c  button_input.h  display_font.c  display_font.h  display_screen.c  display_screen.h  display_viewport.c  display_viewport.h  font_test_content.h  idf_component.yml  main.c  sd_content.c  sd_content.h  text_utils.c  text_utils.h
